<resources>
    <string name="app_name">Assignment</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="let_sign_in">Let\'s Sign in</string>
    <string name="fill_the_details_below_to_continue">Fill the details below to continue</string>
    <string name="username_or_email">Username or Email</string>
    <string name="enter_username_or_email">Enter Username or Email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="new_to_ads_watch">New to ADS watch?</string>
    <string name="sign_up">Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>